# IHM_station

./: README.md  code_pds_mem_partagee_enzo.py  run.sh
dev/: CMakeLists.txt  IHM_utils.py  test.py
dev/src/: ConsultWidget.cpp  ConsultWidget.h  MonitoringThread.cpp  MonitoringThread.h  MonitoringWidget.cpp  MonitoringWidget.h  QuestionWidget.cpp  QuestionWidget.h  SensorWidget.cpp  SensorWidget.h  ValidationWidget.cpp  ValidationWidget.h  WelcomeWidget.cpp  WelcomeWidget.h  main.cpp  testQt.cpp
dev/style/: style.qss
mockup/: data_acquisition_loop_mockup.py  read_shared_mem_mockup.py  write_shared_mem_mockup.py
